technet-dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: technet
  annotations:
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~ /view/docs/pdf-gateway/(.*) {
        return 302 /view/docs/pdf-gateway-10/$1;
      }

      location ~ /guide-assets/pdf-gateway/(.*) {
        return 302 /guide-assets/pdf-gateway-10/$1;
      }

      location ~ /guide-assets/streamdocs-vu/(.*) {
        rewrite ^/guide-assets/streamdocs-vu/(.*)$ /guide-assets/streamdocs/$1;
      }

      if ($remote_addr != "182.208.21.16") { # ePapyrus HQ
        set $unauthorized IP;
      }

      if ($http_x_epapyrus_private_network != "SandCanyon") {
        set $unauthorized "${unauthorized},VPN";
      }

      if ($unauthorized = "IP,VPN") {
        return 302 https://technet.test.epapyrus.com$request_uri;
      }
spec:
  tls:
  - hosts:
    - technet.hq.test.epapyrus.com
    secretName: technet.hq.test.epapyrus.com-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: technet-doc
spec:
  tls:
  - hosts:
    - technet.hq.test.epapyrus.com
    secretName: technet.hq.test.epapyrus.com-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamdocs-tutorial
spec:
  tls:
  - hosts:
    - technet.hq.test.epapyrus.com
    secretName: technet.hq.test.epapyrus.com-tls
